--- a/WebServer/src/main/resources/static/PacientsSearch.html
+++ b/WebServer/src/main/resources/static/PacientsSearch.html
@@ -115,7 +115,7 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="homePage.html">
+            <a href="index.html">
                 <img src="logo.png" alt="LifeManager Logo" width="50" style="margin-left: 20px; margin-right: 20px;">
             </a>
             <a class="navbar-brand" href="MedStaffPage.html">LifeManager</a>
@@ -129,7 +129,7 @@
                         <a class="nav-link" href="PacientsSearch.html">Search</a>
                      </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="HomePage/homePage.html" onclick=clearStorage()>Logout</a>
+                        <a class="nav-link" href="index.html" onclick=clearStorage()>Logout</a>
                     </li>
                 </ul>
             </div>
