--- a/WebServer/src/main/resources/static/MedStaffPage.html
+++ b/WebServer/src/main/resources/static/MedStaffPage.html
@@ -121,7 +121,7 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="homePage.html">
+            <a href="index.html">
                 <img src="logo.png" alt="LifeManager Logo" width="50" style="margin-left: 20px; margin-right: 20px;">
             </a>
             <a class="navbar-brand" href="MedStaffPage.html">LifeManager</a>
