--- a/WebServer/src/main/resources/static/PacientProfileMed.html
+++ b/WebServer/src/main/resources/static/PacientProfileMed.html
@@ -126,7 +126,7 @@
                      <a class="nav-link" href="PacientsSearch.html">Search</a>
                   </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="HomePage/homePage.html" onclick=clearStorage()>Logout</a>
+                        <a class="nav-link" href="index.html" onclick=clearStorage()>Logout</a>
                     </li>
                 </ul>
             </div>
