--- a/WebServer/src/main/resources/static/Regist/PacientsRegisterByMedStaff.html
+++ b/WebServer/src/main/resources/static/Regist/PacientsRegisterByMedStaff.html
@@ -72,10 +72,10 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="homePage.html">
+            <a href="../index.html">
                 <img src="../logo.png" alt="LifeManager Logo" width="50" style="margin-left: 20px; margin-right: 20px;">
             </a>
-            <a class="navbar-brand" href="../HomePage/homePage.html">LifeManager</a>
+            <a class="navbar-brand" href="../index.html">LifeManager</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
