--- a/WebServer/src/main/resources/static/Logins/MedicalStaffLogin.html
+++ b/WebServer/src/main/resources/static/Logins/MedicalStaffLogin.html
@@ -94,8 +94,11 @@
                   }
                   else
                   {
+                    console.log('aqui')
                     $.ajax({
                       url: 'http://172.17.0.1:8080/login?medicalID='+uid+'&password='+pwd,
+                      dataType: "jsonp",
+                      crossDomain: true,
                       beforeSend: function(xhr) {
                         xhr.setRequestHeader("Authorization", "Bearer 6QXNMEMFHNY4FJ5ELNFMP5KRW52WFXN5")
                       }, success: function(data){
